@@ -1,3 +1,5 @@
+  - fix is_secure() should only check if a file is_readable, not if
+    the directory where it is in is readable (sagi, messju)
   - fix problem displaying debug console when $default_resource_type
     is not "file:" (c960657, Monte)
   - fix permission handling with security and config_load (messju)
